# demand_forecaster

./: cli_V2.py  demo.ipynb  pyproject.toml  requirements.txt
demand_forecaster/: forecaster.py  promotions.py  utils.py
demand_forecaster_package_final/: Installation.txt  README.md  setup.py
demand_forecaster_package_final/demand_forecaster/: __init__.py  cli.py
demand_forecaster_package_final/examples/: dummy_future_plan.csv  dummy_future_promos.csv  dummy_weather.csv
demand_forecaster_package_final/outputs/: forecast_monthly.csv  forecast_weekly.csv
examples/: demo_notebook.ipynb  dummy_events.csv  dummy_sales.csv
outputs/: forecast_daily.csv
